fixed the alignment of the header

--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
 }
 .head {
   display: flex;
+  position: relative;
+  left: -70px;
 }
 h1 {
   font-family: "Playfair Display", serif;
